# openarm-control

./: .gitattributes  .gitignore  CITATION.cff  CONTRIBUTING.md  README.md  ROADMAP.md  _scanned_params.json  build_scanned.py  gen_scanned_scene.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
benchmarks/: README.md  catching_benchmark.py  openarm_bench.py  plot_openarm_bench.py  throwing_benchmark.py
benchmarks/results/: ablations.csv  difficulty.csv  estimation.csv  openarm_bench.csv  throwing_reachability.csv  throwing_summary.csv  throwing_trials.csv  vision_noise.csv
demos/: insert_bc.pt  reach_bc.pt
docs/: IMPLEMENTATION_LOG.md  MODELS.md  ROADMAP_EXTENSIONS.md
media/: README.md
openarm_control/: __init__.py  articulated.py  autonomy.py  balance.py  bimanual.py  catching.py  cli.py  cloth.py  config.py  controller.py  grasp.py  grasp6.py  gravity_compensation.py  kinematics.py  pick_and_place.py  pushing.py  throwing.py  trajectory.py
openarm_control/agent/: __init__.py  articulated_session.py  bimanual_session.py  commands.py  executor.py  session.py
openarm_control/contact/: __init__.py  admittance.py
openarm_control/demos/: __init__.py  demo_admittance.py  demo_articulated.py  demo_balance.py  demo_bimanual.py  demo_cartesian_control.py  demo_catch.py  demo_cloth.py  demo_fk.py  demo_gripper.py  demo_ik.py  demo_insert.py  demo_interactive.py  demo_manipulate.py  demo_motion_planning.py  demo_pick_and_place.py  demo_push.py  demo_stack.py  demo_teleop.py  demo_throw.py  demo_tool.py  demo_trajectory.py  demo_unscrew.py  demo_visual_servo.py
openarm_control/imitation/: __init__.py  act.py  bc.py  collect.py  device.py  eval.py  expert.py
openarm_control/planners/: __init__.py  collision.py  prm.py  rrt.py
openarm_control/rl/: __init__.py  balance_env.py  balance_residual_env.py  eval.py  insert_env.py  pick_place_env.py  reach_env.py  train.py
openarm_control/teleop/: __init__.py  pose.py  retarget.py  teleop.py
openarm_control/vision/: __init__.py  ball_tracker.py  camera.py  detection.py  detector.py  finetune.py  multiview.py  scene_perception.py  servoing.py  synthgen.py
scripts/: fetch_models.py  gen_showcase_media.py
scripts/openarm_dataset/: README.md  openarm_dataset_dataset_builder.py
tests/: conftest.py  test_act.py  test_admittance.py  test_articulated.py  test_articulated_assets.py  test_balance.py  test_bimanual.py  test_catch.py  test_cli.py  test_cloth.py  test_commands.py  test_executor.py  test_foundation.py  test_grasp6.py  test_harness.py  test_i1_language.py  test_imitation.py  test_insert_rl.py  test_insertion.py  test_integration.py  test_interaction.py  test_openarm_bench.py  test_perception.py  test_pushing.py  test_rl.py  test_rl_balance_env.py  test_robustness.py  test_scanned.py  test_session.py  test_stacking.py  test_synth_perception.py  test_teleop.py  test_throwing.py  test_tool.py  test_unscrew.py  test_vision.py
v2/openarm_mujoco_v2/: articulated_scene.xml  balance_scene.xml  bimanual_handover_scene.xml  bimanual_scene.xml  bimanual_stack_scene.xml  bimanual_table_scene.xml  catch_bimanual_scene.xml  catch_scene.xml  catch_twoball_scene.xml  cloth_scene.xml  contact_scene.xml  move_puck_scene.xml  openarm_pedestal.xml  openarm_v20_bimanual.xml  pedestal.xml  peg_cuboid_scene.xml  peg_socket_scene.xml  peg_square_scene.xml  push_scene.xml  reach_scene.xml  rl_pick_scene.xml  scanned_table_scene.xml  single_arm_scene.xml  single_arm_scene_obstacle.xml  stack_scene.xml  tabletop_scene.xml  teleop_pick_scene.xml  teleop_scene.xml  throw_multi_scene.xml  throw_scene.xml  tool_scene.xml  unscrew_scene.xml  vision_scene.xml
v2/openarm_mujoco_v2/assets/scanned/: README.txt
v2/openarm_mujoco_v2/assets/visual/arm/: link1_0.mtl
